# sshman

./: .gitignore  README.md  deployment-todo.md  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml  package-linux.yml  package-windows.yml  publish.yml
packaging/winget/: Dejan.sshman.installer.yaml  Dejan.sshman.locale.en-US.yaml  Dejan.sshman.yaml
sshman/: __init__.py  _version.py  app.py  docker.py  keygen.py  models.py  ssh_agent.py  ssh_config.py  storage.py
tests/: __init__.py  test_docker.py  test_keygen.py  test_models.py  test_ssh_agent.py  test_ssh_config.py  test_storage.py
