[project]
name = "sshmanager"
version = "0.1.0"
description = "A simple interactive TUI SSH connection manager"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["ssh", "terminal", "tui", "cli", "connection-manager", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Terminals",
]
dependencies = [
    "pydantic>=2.12.5",
    "textual>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/dejan/sshman"
Repository = "https://github.com/dejan/sshman"
Issues = "https://github.com/dejan/sshman/issues"

[project.scripts]
sshman = "sshman.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sshman"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
