[project]
name = "sshmanager"
dynamic = ["version"]
description = "A simple interactive TUI SSH connection manager"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["ssh", "terminal", "tui", "cli", "connection-manager", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Terminals",
]
dependencies = [
    "pydantic>=2.12.5",
    "textual>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/dejan/sshman"
Repository = "https://github.com/dejan/sshman"
Issues = "https://github.com/dejan/sshman/issues"

[project.scripts]
sshman = "sshman.app:run"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "pep440"

[tool.hatch.build.hooks.vcs]
version-file = "sshman/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["sshman"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "twine>=6.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "W293",   # blank line contains whitespace (in CSS strings)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]  # Allow unused arguments in tests (fixtures)

[tool.ruff.lint.isort]
known-first-party = ["sshman"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
